Express-Node/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: express-node
  labels:
    app: express-node
spec:
  selector:
    matchLabels:
      app: express-node
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: express-node
    spec:
      restartPolicy: Always
      containers:
      - name: express-node
        image: prskid1000/express_node
        imagePullPolicy: Always
        ports:
        - containerPort: 3001
        # livenessProbe:
        #   httpGet:
        #     path: /status
        #     port: 5000
        #   initialDelaySeconds: 3
        #   periodSeconds: 3
        resources:
          requests:
            memory: "512Mi"
            cpu: "50m"
          limits:
            memory: "1024Mi"
            cpu: "500m"
            
#NOTE: comment out `volumeMounts` section for configmap and\or secret guide
        # volumeMounts:
        # - name: secret-volume
        #   mountPath: /secrets/
        # - name: config-volume
        #   mountPath: /configs/
#NOTE: comment out `volumes` section for configmap and\or secret guide
      # volumes:
      # - name: secret-volume
      #   secret:
      #     secretName: mysecret
      # - name: config-volume
      #   configMap:
      #     name: example-config #name of our configmap object
